# daylight

./: BRAND_LICENSE.md  LICENSE  NOTICE  README.md  SECURITY.md  WHITEPAPER.md
contracts/evm/: foundry.toml
contracts/evm/src/: DayCreate3Factory.sol  DayExecutorGuardian.sol  DayLayerZeroOwnerCommand.sol  DayOriginBoundPosition.sol  DayRegistry.sol  DayRouterExecutor.sol  DayThinRouter.sol  (+4 more)
contracts/solana/day_router/: Cargo.toml
contracts/solana/day_router/src/: lib.rs
contracts/sui/: Move.toml  Published.toml
contracts/sui-day-oapp/: Move.toml  Published.toml  README.md
contracts/sui-suilend-adapter/: Move.toml  Published.toml
runtime/adapters/: adapter-interface.mjs
runtime/config/: fee-config.mjs
runtime/lib/: bps.mjs
schemas/: README.md  auto-yield-discovery.v1.json  auto-yield-plan.v1.json  auto-yield-policy.v1.json  day-api.v1.json  day-auto-pay.v2.json  day-autopilot-tick.v1.json  day-cage-action-plan.v1.json  day-cage-action.v1.json  day-capability.v1.json  day-enablement.v1.json  day-estimates.v1.json  day-execution-family-evidence.v1.json  day-execution-family-inventory.v1.json  day-harvest-plan.v1.json  day-map-venues.v1.json  day-opportunity.v1.json  day-owner-policy.v1.json  day-pilot-policy.v1.json  day-position-state.v1.json  day-strategy-guardrails.v1.json  day-unified-db.v1.sql  day-vault-action-plan.v1.json  day-vault-action.v1.json  day-vault-factory-policy.v1.json  day-vault-plan.compose.v1.json  day-vault-plan.v1.json  day-vault-screening.v1.json  day-vault-strategy-registry.v1.json  day-vault.v1.json  day-venues.v1.json
(+41 files in other folders)
