[package]
name = "day_router"
version = "0.1.0"
description = "DAY YieldRouter + AdapterRegistry skeleton (Solana)"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "day_router"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# Pin to platform-tools-compatible solana_program (Agave 2.x / 4.x CLI)
solana-program = "2.1"
borsh = "1.5"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "2.1"
solana-sdk = "2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
